--- a/public/style.css
+++ b/public/style.css
@@ -9,7 +9,7 @@
  }
  
 #body1{
-	background-color :#FFFACD;
+	background-color :red;
     width: 100%;
     height:100%;
 }
@@ -79,7 +79,38 @@ this is the round white input container inside which text input and button is th
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 }
+#friendsheader{
+    box-shadow: 0px 3px 5px rgba(0,0,0,0.3);
+    cursor: pointer;
+    padding: 20px;
+    border: none;
+    margin-bottom: 10px;
+    transition: all 0.3s;
+    background-color:  #99e6ff;
+    color: white;
+    text-align: center;
+    font-family: Arial;
+    font-size: 40px;
+}
+#friends{
+    box-shadow: 0px 3px 5px rgba(0,0,0,0.3);
+    cursor: pointer;
+    padding: 20px;
+    border: none;
+    margin-bottom: 10px;
+    transition: all 0.3s;
+    background-color:#d2ff4d;
+    color: black;
+    text-align: center;
+    font-family: Arial;
+    font-size: 20px;
 
+}
+
+#friends:hover {
+    transition: all 0.3s;
+    box-shadow: 0px 10px 15px rgba(0,0,0,0.3);
+}
 
 /*
 ei duto class bujhli? yo my_msg class dynamically attach hobe tor msgs gulo..likewise the other also
